# kubectl-log-index

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: args.rs  main.rs
