[package]
name = "kubectl-log-index"
version = "0.3.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
colored = "3.0.0"
atty = "0.2.14"

